--- a/app.json
+++ b/app.json
@@ -6,8 +6,8 @@
     "python3",
     "telegram",
     "bot",
-    "Espro",
-    "MusicBot",
+    "Anurag",
+    "Musicpro",
     "telegram-bot",
     "pyrogram"
     ],
